--- a/week1/1.org
+++ b/week1/1.org
@@ -1,10 +1,10 @@
 FIRST WEEK NOTES -*- mode:org -*-
-** FIRST WEEK NOTES
+* FIRST WEEK NOTES
 
 
-* /dev/null can be used to suppress output if we do not want to see it on stdout
-** stdin -0, stdout-1, stderr - 2
-** Thats when you use the syntax ./blah > /dev/null 2>&1
+** /dev/null can be used to suppress output if we do not want to see it on stdout
+- stdin -0, stdout-1, stderr - 2
+- Thats when you use the syntax ./blah > /dev/null 2>&1
 
 * [3/4] TODO reading
 - [ ] Read the 1st 3 chapters of the Stevens book
